added interactive button to web page

--- a/profile.html
+++ b/profile.html
@@ -45,6 +45,11 @@
                 </li>
             </ul>
         </div>
+        <div class="interactive-container">
+            <button class="interactive">
+                Click me!
+            </button>
+        </div>
         <div class="gaming">
             <h2>
                 Games I play
@@ -73,13 +78,13 @@
             <h2>
                 Socials/Online platforms
             </h2>
-            <button>
+            <button class="discord">
                 Discord
             </button>
-            <button>
+            <button class="instagram">
                 Instagram
             </button>
-            <button>
+            <button class="github">
                 Github
             </button>
         </div>
