changed layout of interactive button and socials

--- a/profile.html
+++ b/profile.html
@@ -46,6 +46,10 @@
             </ul>
         </div>
         <div class="interactive-container">
+            <div id="number">
+                0
+            </div>
+            <div id="message"></div>
             <button class="interactive">
                 Click me!
             </button>
@@ -78,16 +82,23 @@
             <h2>
                 Socials/Online platforms
             </h2>
-            <button class="discord">
-                Discord
-            </button>
-            <button class="instagram">
-                Instagram
-            </button>
-            <button class="github">
-                Github
-            </button>
+            <div class="discord-container">
+                <button class="discord">
+                    Discord
+                </button>
+            </div>
+            <div class="instagram-container">
+                <button class="instagram">
+                    Instagram
+                </button>
+            </div>
+            <div class="github-container">
+                <button class="github">
+                    Github
+                </button>
+            </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
