added mobile legends to games

--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
                                         preview
                                     </a>
                                 </li>
+                                <li>
+                                    Mobile Legends
+                                    <a href="https://www.youtube.com/watch?v=vc-TFUi8y9o&ab_channel=Hoon" target="_blank">
+                                        preview
+                                    </a>
+                                </li>
                             </h3>
                         </ul>
                     </div>
